--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,140 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Recoleta';
+  background-color: var(--bg1);
+}
+
+:root {
+  --bg0: #fffdf8;
+  --tx0: black;
+  --bg1: black;
+  --tx1: #fffdf8;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+p {
+  font-weight: 300;
+  font-family: Noto;
+  font-size: max(2vw, 18px);
+  line-height: 120.5%;
+  letter-spacing: -0.04em;
+  text-align: center;
+  color: var(--tx1);
+}
 
 * {
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-smooth: always;
+  margin: 0;
+  padding: 0;
+}
+
+@font-face {
+  font-family: 'Recoleta';
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+  src: ('./fonts/Recoleta-Medium.ttf');
+  src: url('./fonts/Recoleta-Medium.woff') format('woff'),
+    url('./fonts/Recoleta-Medium.woff2') format('woff2'),
+    url('./fonts/Recoleta-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Recoleta';
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+  src: url('./fonts/Recoleta-Regular.eot');
+  src: url('./fonts/Recoleta-Regular.woff') format('woff'),
+    url('./fonts/Recoleta-Regular.woff2') format('woff2'),
+    url('./fonts/Recoleta-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Recoleta';
+  font-weight: 300;
+  font-display: swap;
+  font-style: normal;
+  src: url('./fonts/Recoleta-Light.eot');
+  src: url('./fonts/Recoleta-Light.woff') format('woff'),
+    url('./fonts/Recoleta-Light.woff2') format('woff2'),
+    url('./fonts/Recoleta-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Recoleta';
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal;
+  src: url('./fonts/Recoleta-SemiBold.eot');
+  src: url('./fonts/Recoleta-SemiBold.woff') format('woff'),
+    url('./fonts/Recoleta-SemiBold.woff2') format('woff2'),
+    url('./fonts/Recoleta-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Noto';
+  font-weight: 400;
+  font-display: swap;
+  letter-spacing: -0.09em;
+  font-style: normal;
+  src: url('./fonts/NotoSans.eot');
+  src: url('./fonts/NotoSans.woff') format('woff'),
+    url('./fonts/NotoSans.woff2') format('woff2'),
+    url('./fonts/NotoSans.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Noto';
+  font-weight: 300;
+  font-display: swap;
+  letter-spacing: -0.09em;
+  font-style: normal;
+  src: url('./fonts/NotoSans-Light.eot');
+  src: url('./fonts/NotoSans-Light.woff') format('woff'),
+    url('./fonts/NotoSans-Light.woff2') format('woff2'),
+    url('./fonts/NotoSans-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Noto';
+  font-weight: 400;
+  font-display: swap;
+  letter-spacing: -0.09em;
+  font-style: normal;
+  src: url('./fonts/NotoSans-Regular.eot');
+  src: url('./fonts/NotoSans-Regular.woff') format('woff'),
+    url('./fonts/NotoSans-Regular.woff2') format('woff2'),
+    url('./fonts/NotoSans-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Noto';
+  font-weight: 500;
+  font-display: swap;
+  letter-spacing: -0.09em;
+  font-style: normal;
+  src: url('./fonts/NotoSans-SemiBold.eot');
+  src: url('./fonts/NotoSans-SemiBold.woff') format('woff'),
+    url('./fonts/NotoSans-SemiBold.woff2') format('woff2'),
+    url('./fonts/NotoSans-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Noto';
+  font-weight: 600;
+  font-display: swap;
+  letter-spacing: -0.09em;
+  font-style: normal;
+  src: url('./fonts/NotoSans-Bold.eot');
+  src: url('./fonts/NotoSans-Bold.woff') format('woff'),
+    url('./fonts/NotoSans-Bold.woff2') format('woff2'),
+    url('./fonts/NotoSans-Bold.ttf') format('truetype');
 }
