--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,8 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Recoleta';
-  background-color: var(--bg1);
+  background: black;
+  z-index: -2;
 }
 
 :root {
@@ -15,7 +16,7 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: underline;
 }
 p {
   font-weight: 300;
